--- a/src/log4j2.properties
+++ b/src/log4j2.properties
@@ -13,7 +13,7 @@ appender.file.filename=${filename}/mylogs.log
 appender.file.layout.type=PatternLayout
 appender.file.layout.pattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-rootLogger.level=ALL
+rootLogger.level=DEBUG
 rootLogger.appenderRefs=stdout, file
 rootLogger.appenderRef.stdout.ref=STDOUT
 rootLogger.appenderRef.file.ref=LOGFILE
